objects/Collections_Talking_Point__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Add_to_Standard_Note__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add to Standard Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>These are the talking points an agent reads or references during a call</description>
        <inlineHelpText>These are the talking points an agent reads or references during a call</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collections Talking Point</label>
    <pluralLabel>Collections Talking Points</pluralLabel>
</CustomObject>